--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ flask
 flask-sqlalchemy==2.5.1
 mysqlclient  
 Django==1.6.1
+#Django==2.2.28
 python-etcd==0.4.5
 Django-Select2==6.0.1 
 irc==16.2 
