--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
     - run:
         command: |
           snyk auth $SNYK_TOKEN
-          snyk test || true
+          snyk test --command=python3 || true
   docker_workflow:
     docker:
       - image: cimg/python:3.10.8
