--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ jobs:
     - run:
         command: |
           snyk auth $SNYK_TOKEN
+          pip install -r requirements.txt
           snyk test --command=python3 || true
   docker_workflow:
     docker:
