--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,14 +20,16 @@ jobs:
           snyk code test || true
   snyk_oss_test:
     docker:
-    - image: snyk/snyk-cli:python-3.6
+    - image: cimg/python:3.6.15
     steps:
     - checkout
     - run:
         command: |
-          snyk auth $SNYK_TOKEN
           pip install -r requirements.txt
-          snyk test --command=python3 || true
+    - snyk/scan:
+        token-variable: SNYK_TOKEN                           # use is api token stored in an env variable named other than SNYK_TOKEN
+        fail-on-issues: false                                     # don't fail even if issues detected (not recommended!)
+        additional-arguments: "command=python3"
   docker_workflow:
     docker:
       - image: cimg/python:3.10.8
