--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
     - snyk/scan:
         token-variable: SNYK_TOKEN                           # use is api token stored in an env variable named other than SNYK_TOKEN
         fail-on-issues: false                                     # don't fail even if issues detected (not recommended!)
-        additional-arguments: "command=python3"
+        additional-arguments: "--command=python3"
   docker_workflow:
     docker:
       - image: cimg/python:3.10.8
