--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
     - snyk/scan:
         token-variable: SNYK_TOKEN                           # use is api token stored in an env variable named other than SNYK_TOKEN
         fail-on-issues: false                                     # don't fail even if issues detected (not recommended!)
+        monitor-on-build: false
         additional-arguments: "--command=python3"
   docker_workflow:
     docker:
