--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,10 +19,10 @@ jobs:
           snyk auth $SNYK_TOKEN
           snyk code test || true
           npm install -g snyk snyk-to-html
-          snyk code test --json | snyk-to-html -o /tmp/results-code.html
+          snyk code test --json | snyk-to-html -o /tmp/results-code.html || true
     - store_artifacts:
         path: /tmp/results-code.html
-        destination: artifact-file
+        destination: snyk-code-result
   snyk_oss_test:
     docker:
     - image: cimg/python:3.6.15
@@ -57,6 +57,10 @@ jobs:
           TAG=0.1.<< pipeline.number >>
           snyk auth $SNYK_TOKEN
           snyk container test jiajunngjj/flask-polling-app:$TAG --file=./Dockerfile || true
+          snyk container test jiajunngjj/flask-polling-app:$TAG --file=./Dockerfile --json | snyk-to-html -o /tmp/results-container.html || true
+    - store_artifacts:
+        path: /tmp/results-container.html
+        destination: snyk-container-result
   trigger_argocd:
     docker:
       - image: cimg/base:2022.04
